--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
+  <link rel="preload" href="/fonts/SupersetRegular.ttf" as="font" crossorigin>
 
 
     <link
