changed the protocol for video react stylesheet (attempt to fix moxed content error)

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <link
   rel="stylesheet"
-  href="https://video-react.github.io/assets/video-react.css"
+  href="//video-react.github.io/assets/video-react.css"
 />
 <!--
       manifest.json provides metadata used when your web app is installed on a
