--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div style="font-family: 'Superset'"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
