attempt to fix font on vite migrate

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
-  <link rel="preconnect" href="src/assets/fonts/SupersetRegular.ttf" as="font" crossorigin>
+  <link rel="preload" href="src/assets/fonts/SupersetRegular.ttf" as="font" crossorigin>
   <script type="module" src="/src/index.jsx"></script>
 
     
@@ -42,6 +42,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div style="font-family: 'Superset'; display: none;">test</div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
